--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,7 @@
-@font-face { font-family: OpenSans; src: local('OpenSans'), url('/fonts/OpenSans-Regular.ttf');}
-@font-face { font-family: OpenSans; font-weight: bold; src: local('OpenSans-Bold'), url('/fonts/OpenSans-Bold.ttf');}
-@font-face { font-family: OpenSans; font-style: italic; src: local('OpenSans-Italic'), url('/fonts/OpenSans-Italic.ttf');}
-@font-face { font-family: OpenSans; font-weight: bold; font-style: italic; src: local('OpenSans-BoldItalic'), url('/fonts/OpenSans_BoldItalic.ttf');}
+@font-face { font-family: OpenSans; src: local('OpenSans'), url('fonts/OpenSans-Regular.ttf');}
+@font-face { font-family: OpenSans; font-weight: bold; src: local('OpenSans-Bold'), url('fonts/OpenSans-Bold.ttf');}
+@font-face { font-family: OpenSans; font-style: italic; src: local('OpenSans-Italic'), url('fonts/OpenSans-Italic.ttf');}
+@font-face { font-family: OpenSans; font-weight: bold; font-style: italic; src: local('OpenSans-BoldItalic'), url('fonts/OpenSans_BoldItalic.ttf');}
 
 
 body {
